--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Channel Manager Update",
+  "name": "Adobe Spectrum KB",
   "author": "Adobe Systems Incorporated",
-  "version": "2.16.6",
+  "version": "2.16.7",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
