--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Channel Manager Update",
+  "name": "Coveo Implementation",
   "author": "Adobe Systems Incorporated",
-  "version": "2.16.5",
+  "version": "2.16.8",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
