--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Coveo Implementation",
+  "name": "Coveo ExL Implementation",
   "author": "Adobe Systems Incorporated",
-  "version": "2.17.9",
+  "version": "2.18.0",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
